--- a/ruleset-XPM.cfg
+++ b/ruleset-XPM.cfg
@@ -27,3 +27,4 @@ g_vehicles 0
 sv_showspectators 0
 sv_taunt 0
 sv_maxidle_playertospectator 0
+g_ca_spectate_enemies -1 // block freeroam camera in CA matches
