step towards working notifications

--- a/notifications.cfg
+++ b/notifications.cfg
@@ -651,6 +651,12 @@ seta notification_WEAPON_ARC_MURDER_SPRAY "1" "Enable this multiple notification
 seta notification_WEAPON_ARC_SUICIDE_BOLT "1" "Enable this multiple notification"
 seta notification_WEAPON_BLASTER_MURDER "1" "Enable this multiple notification"
 seta notification_WEAPON_BLASTER_SUICIDE "1" "Enable this multiple notification"
+seta notification_WEAPON_CLASSIC_PRI_MURDER_DIRECT "1" "Enable this multiple notification"
+seta notification_WEAPON_CLASSIC_PRI_MURDER_SPLASH "1" "Enable this multiple notification"
+seta notification_WEAPON_CLASSIC_PRI_SUICIDE "1" "Enable this multiple notification"
+seta notification_WEAPON_CLASSIC_SEC_MURDER_DIRECT "1" "Enable this multiple notification"
+seta notification_WEAPON_CLASSIC_SEC_MURDER_SPLASH "1" "Enable this multiple notification"
+seta notification_WEAPON_CLASSIC_SEC_SUICIDE "1" "Enable this multiple notification"
 seta notification_WEAPON_CRYLINK_MURDER "1" "Enable this multiple notification"
 seta notification_WEAPON_CRYLINK_SUICIDE "1" "Enable this multiple notification"
 seta notification_WEAPON_DEVASTATOR_MURDER_DIRECT "1" "Enable this multiple notification"
