why shot delayed

--- a/bal-wep-samual.cfg
+++ b/bal-wep-samual.cfg
@@ -298,6 +298,9 @@ set g_balance_crylink_weaponthrowable 1
 set g_balance_vortex_charge 1
 set g_balance_vortex_charge_always 0
 set g_balance_vortex_charge_animlimit 0.5
+set g_balance_vortex_charge_bow 1
+set g_balance_vortex_charge_bow_hold 4
+set g_balance_vortex_charge_bow_hold_releasedeath 0
 set g_balance_vortex_charge_limit 1
 set g_balance_vortex_charge_maxspeed 800
 set g_balance_vortex_charge_mindmg 40
