individual dp_sf for devastator

--- a/bal-wep-nexuiz25.cfg
+++ b/bal-wep-nexuiz25.cfg
@@ -390,6 +390,7 @@ set g_balance_devastator_ammo 3
 set g_balance_devastator_animtime 0.3
 set g_balance_devastator_damage 105
 set g_balance_devastator_damageforcescale 4
+set g_balance_devastator_damagepush_speedfactor 0
 set g_balance_devastator_detonatedelay 0.2
 set g_balance_devastator_edgedamage 40
 set g_balance_devastator_force 600
