--- a/bal-wep-xdf.cfg
+++ b/bal-wep-xdf.cfg
@@ -390,6 +390,7 @@ set g_balance_devastator_ammo 4
 set g_balance_devastator_animtime 0.7
 set g_balance_devastator_damage 80
 set g_balance_devastator_damageforcescale 0
+set g_balance_devastator_damagepush_speedfactor 0
 set g_balance_devastator_detonatedelay 999
 set g_balance_devastator_edgedamage 40
 set g_balance_devastator_force 350
