--- a/bal-wep-mario.cfg
+++ b/bal-wep-mario.cfg
@@ -390,6 +390,7 @@ set g_balance_devastator_ammo 4
 set g_balance_devastator_animtime 0.4
 set g_balance_devastator_damage 80
 set g_balance_devastator_damageforcescale 1
+set g_balance_devastator_damagepush_speedfactor 0
 set g_balance_devastator_detonatedelay 0.02
 set g_balance_devastator_edgedamage 40
 set g_balance_devastator_force 400
