Item Pickup panel
* This panel shows the weapon or item that has been just picked up, with its icon, item name, and time of pickup.
* The time of pickup can be hidden by the client or the server (default in XPM ruleset).
* If you pick up the same item several times in a row it will show (x2, x3...) in parentheses.
* Display time, fade out time and icon size can all be configured. The size of its contents automatically change size to fit the panel size.

--- a/_hud_descriptions.cfg
+++ b/_hud_descriptions.cfg
@@ -380,3 +380,12 @@ seta hud_panel_strafehud_bg_color_team "" "override panel color with team color 
 seta hud_panel_strafehud_bg_alpha "" "if set to something else than \"\" = override default panel background alpha"
 seta hud_panel_strafehud_bg_border "" "if set to something else than \"\" = override default size of border around the background"
 seta hud_panel_strafehud_bg_padding "" "if set to something else than \"\" = override default padding of contents from border"
+
+seta hud_panel_pickup_pos "" "position of this base of the panel"
+seta hud_panel_pickup_size "" "size of this panel"
+seta hud_panel_pickup_bg "" "if set to something else than \"\" = override default background"
+seta hud_panel_pickup_bg_color "" "if set to something else than \"\" = override default panel background color"
+seta hud_panel_pickup_bg_color_team "" "override panel color with team color in team based games"
+seta hud_panel_pickup_bg_alpha "" "if set to something else than \"\" = override default panel background alpha"
+seta hud_panel_pickup_bg_border "" "if set to something else than \"\" = override default size of border around the background"
+seta hud_panel_pickup_bg_padding "" "if set to something else than \"\" = override default padding of contents from border"
