strafehud: make sonar sound interval dynamic too

--- a/_hud_common.cfg
+++ b/_hud_common.cfg
@@ -212,7 +212,8 @@ seta hud_panel_strafehud_fps_update "0.5" "update interval (in seconds) of the f
 seta hud_panel_strafehud_sonar "0" "set to \"1\" to enable the strafe sonar"
 seta hud_panel_strafehud_sonar_audio "misc/talk" "audio to play for sonar"
 seta hud_panel_strafehud_sonar_start "0.5" "how optimal from 0 to 1 your strafing angle has to be for the strafe sonar to activate"
-seta hud_panel_strafehud_sonar_interval "0.333333" "strafe sonar sound interval in seconds"
+seta hud_panel_strafehud_sonar_interval_start "0.333333" "strafe sonar sound interval in seconds"
+seta hud_panel_strafehud_sonar_interval_range "-0.222222" "dynamic sound interval range in seconds of the strafe sonar as you approach the optimal angle"
 seta hud_panel_strafehud_sonar_volume_start "0.333333" "sound volume of the strafe sonar"
 seta hud_panel_strafehud_sonar_volume_range "0.666666" "dynamic volume range of the strafe sonar as you approach the optimal angle"
 seta hud_panel_strafehud_sonar_pitch_start "0.9" "playback speed of the strafe sonar"
