Add patch from Juhu/strafehud-features branch: "strafehud: add vertical angle indicator"

--- a/_hud_common.cfg
+++ b/_hud_common.cfg
@@ -213,6 +213,9 @@ seta hud_panel_strafehud_sonar_volume_start "0.333333" "sound volume of the stra
 seta hud_panel_strafehud_sonar_volume_range "0.666666" "dynamic volume range of the strafe sonar as you approach the optimal angle"
 seta hud_panel_strafehud_sonar_pitch_start "0.9" "playback speed of the strafe sonar"
 seta hud_panel_strafehud_sonar_pitch_range "0.1" "dynamic playback speed range of the strafe sonar as you approach the optimal angle"
+seta hud_panel_strafehud_vangle "0" "set to \"1\" to enable the vertical angle indicator"
+seta hud_panel_strafehud_vangle_color "0.75 0.75 0.75" "color of the vertical angle text"
+seta hud_panel_strafehud_vangle_size "1" "size of the vertical angle text (relative to the panel height)"
 
 // hud panel aliases
 alias quickmenu "cl_cmd hud quickmenu ${* ?}"
