Use gender-neutral pronouns when referring to the player

--- a/commands.cfg
+++ b/commands.cfg
@@ -343,11 +343,11 @@ set sv_vote_master 0	"Allows the use of the vote master system"
 set sv_vote_master_callable 0 "When set, users can use \"vmaster\" to call a vote to become master of voting commands"
 set sv_vote_master_password "" "when set, users can use \"vlogin PASSWORD\" to log in as master, then run master commands directly using vdo"
 set sv_vote_master_playerlimit 2 "Minimum number of players needed for a player to be allowed to vote for master"
-set sv_vote_no_stops_vote 1 "Allow the vote caller to stop his own vote simply by voting no"
+set sv_vote_no_stops_vote 1 "Allow the vote caller to stop their own vote simply by voting no"
 set sv_vote_singlecount 0	"set to 1 to count votes once after timeout or to 0 to count with every vote"
 set sv_vote_timeout 24	"a vote will timeout after this many seconds"
-set sv_vote_wait 120	"a player can not call a vote again for this many seconds when his vote was not accepted"
-set sv_vote_stop 15	"a player can not call a vote again for this many seconds when he stopped this vote (e.g. to correct it)"
+set sv_vote_wait 120	"a player can not call a vote again for this many seconds when their vote was not accepted"
+set sv_vote_stop 15	"a player can not call a vote again for this many seconds when they stopped this vote (e.g. to correct it)"
 set sv_vote_majority_factor 0.5	"What percentage of the PLAYERS constitute a majority? (Must be at least 0.5, recommended: 0.5)"
 set sv_vote_majority_factor_of_voted 0.5 "What percentage of the VOTERS constitute a majority too? (Must be at least 0.5, recommended: 0.5)"
 set sv_vote_gamestart 0 "Allow voting during map change"
