--- a/gamemodes-server.cfg
+++ b/gamemodes-server.cfg
@@ -297,7 +297,7 @@ set g_ctf_allow_monster_touch 0 "allow flags to be returned by monsters"
 set g_ctf_score_ignore_fields 0 "force regular score settings to override per entity specified scores"
 
 set g_ctf_shield_max_ratio 0	"shield at most this percentage of a team from the enemy flag (try: 0.4 for 40%)"
-set g_ctf_shield_min_negscore 20	"shield the player from the flag if he's got this negative amount of points or less"
+set g_ctf_shield_min_negscore 20	"shield the player from the flag if they've got this negative amount of points or less"
 set g_ctf_shield_force 100	"push force of the shield"
 
 set g_ctf_flag_red_model "models/ctf/flags.md3"
@@ -504,7 +504,7 @@ set g_nexball_basketball_meter_maxpower   1.2    "maximal multiplier to the laun
 set g_nexball_delay_goal     3    "delay between a goal and a ball reset"
 set g_nexball_delay_idle     10   "maximal idle time before a reset"
 set g_nexball_delay_start    3    "time the ball stands on its spawn before being released"
-set g_nexball_delay_collect  0.5  "time before the same player can catch the ball he launched"
+set g_nexball_delay_collect  0.5  "time before the same player can catch the ball they launched"
 set g_nexball_sound_bounce   1    "bouncing sound (0: off)"
 set g_nexball_basketball_trail  1  "1 to leave a trail"
 set g_nexball_football_trail    0  "1 to leave a trail"
