--- a/mutators.cfg
+++ b/mutators.cfg
@@ -76,7 +76,7 @@ set g_vampire_use_total_damage 0 "If 1 then add combined damage (health + armor)
 // ========
 //  midair
 // ========
-set g_midair 0 "if set to 1 you can only apply damage to your opponent while he is airborne"
+set g_midair 0 "if set to 1 you can only apply damage to your opponent while they are airborne"
 set g_midair_shieldtime 0.3 "number of seconds you are still invincible since you lost contact to the ground"
 
 
