Quickmenu: allow players to make server's custom quickmenu default

--- a/_hud_common.cfg
+++ b/_hud_common.cfg
@@ -116,6 +116,8 @@ set _hud_panel_quickmenu_file_from_server "" "reserved cvar set by the server wi
 seta hud_panel_quickmenu_file "" "load the quick menu from this file (empty or 0 to disable)"
 seta hud_panel_quickmenu_translatecommands 0 "when the game is translated, translate strings inside commands too (useful for chat commands)"
 seta hud_panel_quickmenu_time 5 "quickmenu expires after this number of seconds in the same page"
+// do not remember this setting
+set hud_panel_quickmenu_server_is_default 0 "make the server's custom quickmenu the default one"
 
 seta hud_panel_infomessages_group0 1 "show group 0 messages (showing keys for non-crucial actions you can do while spectating/observing)"
 seta hud_panel_infomessages_group_time 6 "number of seconds a message of a group lasts before it gets changed"
