--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -597,4 +597,4 @@ set sv_warpzone_allow_selftarget 0 "do not touch"
 // don't notify cvar changes in the chat
 sv_disablenotify 1
 
-set sv_quickmenu_file "" "filename of the quickmenu that appears in client's default quickmenu, file must be located in a subfolder with an unique name"
+set sv_quickmenu_file "" "filename of a custom server's quickmenu that will be selectable from the default client's quickmenu. This file must be sent in a pk3 archive and should have an unique name (e.g. quickmenu-servername.txt) to prevent overriding existing quickmenus"
