--- a/.tx/config
+++ b/.tx/config
@@ -1,8 +1,10 @@
 [main]
 host = https://www.transifex.com
 
-[xonotic.commonpot]
-file_filter = translations/xonotic.commonpot/<lang>..po
-source_file = translations/xonotic.commonpot/en..po
-source_lang = en
+[o:team-xonotic:p:xonotic:r:commonpot]
+file_filter   = translations/xonotic.commonpot/<lang>..po
+source_file   = translations/xonotic.commonpot/en..po
+type          = PO
+minimum_perc  = 0
+resource_name = common.pot
 
