Corrections and documentation for physicsCPMA.cfg and physicsQ3.cfg
Adds sv_track_canjump to configs that lacked it.

--- a/physicsCPMA.cfg
+++ b/physicsCPMA.cfg
@@ -1,13 +1,21 @@
 g_mod_physics CPMA
 // these values match CPMA
 
-sv_gravity 800
+// CPMA uses gravity 800 but the strength of Q3 gravity is frametime-dependent.
+// This number simulates 125fps Q3 gravity and was calculated by measuring jump height
+// by adding debug prints to Q3.  An average of 24 samples gave the height 48.138171516
+// which was used to calculate this gravity with the formula in physicsX.cfg
+// Modern CPMA has frametime-independent physics that ~match 125fps frametime-dependent.
+// DeFRaG still has frametime-dependent physics and DFWC rules mandate 125fps.
+sv_gravity 757.195357698
 sv_maxspeed 320
 sv_maxairspeed 320
 sv_stopspeed 100
 sv_accelerate 15
 sv_airaccelerate 1
-sv_friction 8
+// The cpm1_dev_docs.zip (only CPMA source code release) used friction 8,
+// but friction is 6 in all ~modern CPMA releases, and in DeFRaG CPM.
+sv_friction 6
 edgefriction 1
 sv_stepheight 18
 sv_jumpvelocity 270
@@ -34,10 +42,13 @@ sv_warsowbunny_backtosideratio 0.8
 sv_friction_on_land 0
 sv_friction_slick 0
 sv_doublejump 0
-sv_jumpspeedcap_min ""
+// match the downhill ramp jumping behaviour of CPMA
+sv_jumpspeedcap_min 0
 sv_jumpspeedcap_max ""
-sv_jumpspeedcap_max_disable_on_ramps 0
+// CPMA has ramp jumping
+sv_jumpspeedcap_max_disable_on_ramps 1
+// FIXME: Q3 teleporters _set_ speed to 400, not cap it
 g_teleport_maxspeed 400
-sv_track_canjump 0
+sv_track_canjump 1
 sv_gameplayfix_stepdown_maxspeed 0
 g_movement_highspeed_q3_compat 1
