Checkpoint house integration

--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -599,3 +599,5 @@ set sv_warpzone_allow_selftarget 0 "do not touch"
 sv_disablenotify 1
 
 set sv_quickmenu_file "" "filename of a custom server's quickmenu that will be selectable from the default client's quickmenu. This file must be sent in a pk3 archive and should have an unique name (e.g. quickmenu-servername.txt) to prevent overriding existing quickmenus"
+
+set sv_checkpoint_house_url "http://127.0.0.1:10876/new-record"
