--- a/physicsQ3.cfg
+++ b/physicsQ3.cfg
@@ -1,7 +1,8 @@
 g_mod_physics Q3
 // these values match Quake3
 
-sv_gravity 800
+// See physicsCPMA.cfg for the source of this sv_gravity setting
+sv_gravity 750
 sv_maxspeed 320
 sv_maxairspeed 320
 sv_stopspeed 100
@@ -17,8 +18,10 @@ sv_waterfriction 1
 sv_airaccel_sideways_friction 0
 sv_airaccel_qw 1
 sv_airaccel_qw_stretchfactor 0
-sv_airstopaccelerate 0
-sv_airstrafeaccelerate 0
+// Q3A doesn't have airstopaccelerate and strafeaccelerate
+// but they're added in cpm1_dev_docs.zip with values 1 and 1 in VQ3 mode
+sv_airstopaccelerate 1
+sv_airstrafeaccelerate 1
 sv_maxairstrafespeed 0
 sv_airstrafeaccel_qw 0
 sv_aircontrol 0
@@ -35,9 +38,11 @@ sv_friction_on_land 0
 sv_friction_slick 0
 sv_doublejump 0
 sv_jumpspeedcap_min ""
-sv_jumpspeedcap_max ""
+// VQ3 has no ramp jumping
+sv_jumpspeedcap_max 270
 sv_jumpspeedcap_max_disable_on_ramps 0
-g_teleport_maxspeed 320
-sv_track_canjump 0
+// FIXME: Q3 teleporters _set_ speed to 400, not cap it
+g_teleport_maxspeed 400
+sv_track_canjump 1
 sv_gameplayfix_stepdown_maxspeed 0
-g_movement_highspeed_q3_compat 0
+g_movement_highspeed_q3_compat 1
