--- a/gamemodes-client.cfg
+++ b/gamemodes-client.cfg
@@ -32,6 +32,8 @@ alias cl_hook_gamestart_ka
 alias cl_hook_gamestart_ft
 alias cl_hook_gamestart_inv
 alias cl_hook_gamestart_duel
+alias cl_hook_gamestart_mayhem
+alias cl_hook_gamestart_tmayhem
 alias cl_hook_gameend
 alias cl_hook_shutdown
 alias cl_hook_activeweapon
