pm: optimise slick surface detection, add XDF mode
This doesn't need its own separate ground trace, we can use the results of
other tracebox calls.

Adds a condition (requested for easier XDF mapping) that considers all
walkable ground to be slick when sv_friction <= sv_friction_slick.
This requires changing how slick is disabled in various configs.

--- a/physics.cfg
+++ b/physics.cfg
@@ -75,7 +75,7 @@ set g_physics_nexuiz_warsowbunny_topspeed 925
 set g_physics_nexuiz_warsowbunny_accel 0.1593
 set g_physics_nexuiz_warsowbunny_backtosideratio 0.8
 set g_physics_nexuiz_friction 7
-set g_physics_nexuiz_friction_slick 7
+set g_physics_nexuiz_friction_slick nan
 set g_physics_nexuiz_stepheight 34
 set g_physics_nexuiz_accelerate 8
 set g_physics_nexuiz_stopspeed 100
@@ -115,7 +115,7 @@ set g_physics_quake_warsowbunny_topspeed 925
 set g_physics_quake_warsowbunny_accel 0.1593
 set g_physics_quake_warsowbunny_backtosideratio 0.8
 set g_physics_quake_friction 4
-set g_physics_quake_friction_slick 4
+set g_physics_quake_friction_slick nan
 set g_physics_quake_stepheight 18
 set g_physics_quake_accelerate 10
 set g_physics_quake_stopspeed 100
@@ -315,7 +315,7 @@ set g_physics_vecxis_warsowbunny_topspeed 925
 set g_physics_vecxis_warsowbunny_accel 0.1593
 set g_physics_vecxis_warsowbunny_backtosideratio 0.8
 set g_physics_vecxis_friction 5
-set g_physics_vecxis_friction_slick 5
+set g_physics_vecxis_friction_slick nan
 set g_physics_vecxis_stepheight 34
 set g_physics_vecxis_accelerate 5.5
 set g_physics_vecxis_stopspeed 100
