--- a/physicsFruit.cfg
+++ b/physicsFruit.cfg
@@ -32,7 +32,7 @@ sv_warsowbunny_accel 0.1593
 sv_warsowbunny_topspeed 925
 sv_warsowbunny_backtosideratio 0.8
 sv_friction_on_land 0
-sv_friction_slick 8 // Nexuiz didn't have slick
+sv_friction_slick "nan"
 sv_doublejump 1 // TINY (1.35x normal) doublejumps only, can be disabled if wanted...
 sv_jumpspeedcap_min 0 // need predicting? (it should already be in CSQC prediction code)
 sv_jumpspeedcap_max 0.35
