--- a/physicsNexuiz10.cfg
+++ b/physicsNexuiz10.cfg
@@ -33,7 +33,7 @@ sv_warsowbunny_accel 0.1593
 sv_warsowbunny_topspeed 925
 sv_warsowbunny_backtosideratio 0.8
 sv_friction_on_land 0.5
-sv_friction_slick 5 // Nexuiz didn't have slick
+sv_friction_slick "nan"
 sv_doublejump 0
 // 1.0 did not allow re-jumping due to a bug, this is quite close to it
 sv_jumpspeedcap_min "nan"
