--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -73,7 +73,7 @@ set sv_gibhealth 100 "minus health a dead body must have in order to get gibbed"
 // use default physics
 sv_playerphysicsqc 1
 set sv_friction_on_land 0 "movement friction applied for half a second upon landing on the ground"
-set sv_friction_slick 0.5 "movement friction while on slick surfaces"
+set sv_friction_slick 0.5 "movement friction while on slick surfaces, if sv_friction <= sv_friction_slick then all ground counts as slick, \"nan\" makes no ground count as slick"
 
 set sv_slick_applygravity 0 "apply a downward force while on slick surfaces to simulate slippery slopes"
 set sv_slickaccelerate 0 "rate at which a player accelerates while on slick surfaces"
