--- a/physicsLeeStricklin.cfg
+++ b/physicsLeeStricklin.cfg
@@ -41,7 +41,7 @@ sv_warsowbunny_accel 0.1593
 sv_warsowbunny_topspeed 925
 sv_warsowbunny_backtosideratio 0.8
 sv_friction_on_land 0
-sv_friction_slick 8 // Nexuiz didn't have slick
+sv_friction_slick "nan"
 sv_doublejump 0
 sv_jumpspeedcap_min "nan"
 sv_jumpspeedcap_max "nan"
